--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap');
+
 *{
     margin:0;
     padding:0;
@@ -7,24 +9,33 @@
 body{
     background: rgb(253, 232, 232);
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+.header { 
+    font-family: 'Fuzzy Bubbles', cursive;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn {
+    font-family: 'Fuzzy Bubbles', cursive;
+    padding: 10px 15px;
+    margin-top: 20px;
 }
 
 .container {
-    margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
+    width: 600px;
+    height: 600px;
     justify-content: center;
 }
 
 .square {
     border: 1px solid black;
-    height: 25px;
-    width: 25px;
     background: white;
 }
-
-.square:nth-child(17n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
-  }
