--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
 
 .btn {
     font-family: 'Fuzzy Bubbles', cursive;
+    font-size: 16px;
     padding: 10px 15px;
     margin-top: 20px;
 }
